--- a/index.html
+++ b/index.html
@@ -1,67 +1,25 @@
 <!DOCTYPE html>
-<!--Objectives: Centered images and text, menu or table of contents, links, search bar, organization-->
 <html>
 <head>
-<title>All Posts l Xavier's Blog</title>
-<link rel="icon" href="Favicon.jpg">
-<style>
-   @font-face {font-family: Cormorant; src: url('CormorantGaramond-Bold.ttf');}
-   
-   #leftbox1 {
-       float: left;
-       width: 15%;
-       height: 135px;
-   }
-
-   #rightbox1 {
-       float: right;
-       width: 80%;
-       height: 135px;
-       font-size: 19px;
-   }
-
-    h2 {text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 50px;}
-    #avatar {
-    /* This image is 687 wide by 1024 tall, similar to your aspect ratio */
-    background-image: url('Profile.jpg');
-    
-    /* make a square container */
-    width: 105px;
-    height: 105px;
-
-    /* fill the container, preserving aspect ratio, and cropping to fit */
-    background-size: cover;
-
-    /* center the image vertically and horizontally */
-    background-position: top center;
-
-    /* round the edges to a circle with border radius 1/2 container size */
-    border-radius: 50%;}
-
-    p {text-align: justify; font-family: Cormorant; font-size: 20px;}
-
-    body {padding-left: 400px; padding-right: 400px}
-    
-    h3 {text-align: center; font-family: Cormorant; font-size: 20px;}
-
-    h4 {padding-left: 135px; font-family:'Times New Roman', Times, serif; font-size: 50px;}
-    </style>
+    <title>All Posts l Xavier's Blog</title>
+    <link rel="icon" href="assets/Favicon.jpg">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h2>Xavier's Blog</h2>
-<div id = "leftbox1">
-    <div id="avatar"></div> 
-</div>
-<div id = "rightbox1">
-    <p>Xavier is a 9th-grader currently living in Southern California. He enjoys most subjects, especially history, and his hobbies include soccer, geography, geology, debate, film, politics, and business-related studies.</p>
-</div>
-<h3>"Because he's not like us, Penny. We're dreamers." - Sheldon Cooper</h3>
-<h4>Hobbies/Interests</h4>
-<div id = "leftbox1">
-    <p2>2021 August 1</p2>
-</div>
-<div id = "rightbox1">
-    <a href="page2.html">My Favorite Songs</a>
-</div>
+    <h2>Xavier's Blog</h2>
+    <div id = "leftbox1">
+        <div id="avatar"></div> 
+    </div>
+    <div id = "rightbox1">
+        <p>I am a high-schooler living in Orange County, CA. I enjoy most things life throws at me and my goal is always to be happy. <a href="aboutme.html">More About Me</a></p>
+    </div>
+    <h3>"Because he's not like us, Penny. We're dreamers." - Sheldon Cooper</h3>
+    <h4>Hobbies/Interests</h4>
+    <div id = "leftbox1">
+        <p2>2021 August 1</p2>
+    </div>
+    <div id = "rightbox1">
+        <a href="hobbies_interests/myfavoritesongs.html">My Favorite Songs</a>
+    </div>
 </body>
 </html>
