--- a/index.html
+++ b/index.html
@@ -21,5 +21,11 @@
     <div id = "rightbox1">
         <a href="hobbies_interests/myfavoritesongs.html">My Favorite Songs</a>
     </div>
+    <div id = "leftbox1">
+        <p2>2021 August 26</p2>
+    </div>
+    <div id = "rightbox1">
+        <a href="writing_prompts/scariestmomentinmylife.html">The Scariest Moment in My Life</a>
+    </div>
 </body>
 </html>
