--- a/index.html
+++ b/index.html
@@ -28,5 +28,12 @@
     <div id = "rightbox1">
         <a href="writing_prompts/scariestmomentinmylife.html">The Scariest Moment in My Life</a>
     </div>
+    <h4>Film</h4>
+    <div id = "leftbox1">
+        <p2>2021 September 1</p2>
+    </div>
+    <div id = "rightbox1">
+        <a href="film/briefhistorywhatisfilm.html">Brief History - What is Film?</a>
+    </div>
 </body>
 </html>
